# EngineToolkit

./: .clang-format  CMakeLists.txt  LICENSE
.github/: CONTRIBUTING.md  README.md  ideas.txt
examples/: CMakeLists.txt  config.h.in
examples/debug/hello_world/: CMakeLists.txt
examples/debug/logging/: CMakeLists.txt  main.cpp
examples/image/: CMakeLists.txt
examples/image/load/: CMakeLists.txt  main.cpp
examples/log/hello_world/: main.cpp
examples/math/: CMakeLists.txt
examples/math/matrix/: main.cpp
examples/math/quaternion/: CMakeLists.txt  main.cpp
examples/math/vector/: main.cpp
examples/matrix/: CMakeLists.txt
examples/matrix/hello_matrix/: CMakeLists.txt  main.cpp
examples/media/load/: main.cpp
examples/model/material/: sample.mtl
examples/ui/: CMakeLists.txt
examples/ui/builder/: CMakeLists.txt  main.cpp  window.hpp
examples/ui/render/: CMakeLists.txt  main.cpp
examples/vector/: CMakeLists.txt
examples/vector/dynamic_vector/: main.cpp
examples/vector/hello_vec/: CMakeLists.txt  main.cpp
examples/vector/hello_vector/: CMakeLists.txt  main.cpp
examples/window/: CMakeLists.txt
examples/window/universal/: main.cpp
examples/window/x11/: CMakeLists.txt  main.cpp
hello_library/: CMakeLists.txt  main.cpp
include/EngineToolkit/: EngineToolkit.hpp
include/EngineToolkit/UI/: Alignment.hpp  Arrangement.hpp  Element.hpp  Layout.hpp  LayoutPrototype.hpp  Modifier.hpp  README.md  ui.hpp
include/EngineToolkit/core/: matrix.hpp  quaternion.hpp  vector.hpp
include/EngineToolkit/debug/: debug.hpp  log.hpp
include/EngineToolkit/ecs/: ecs.hpp
include/EngineToolkit/image/: image.hpp
include/EngineToolkit/log/: log.hpp
include/EngineToolkit/math/: mat.hpp  math.hpp  quat.hpp  quaternion.hpp  vec.hpp
include/EngineToolkit/matrix/: mat.hpp  mat3.hpp  mat4.hpp  matrix.hpp
include/EngineToolkit/media/: audio.hpp  image.hpp  media.hpp
include/EngineToolkit/mesh/: material.hpp  mesh.hpp
old/: image.cpp  mat2.hpp  operators.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
old/image/: image.cpp  image.hpp
old/matrix/: mat2.cpp  mat3.cpp  matrix.hpp
old/vector/: vec1.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/: Library.cpp
src/UI/: Element.cpp  Layout.cpp  LayoutPrototype.cpp  Modifier.cpp
src/debug/: log.cpp
src/ecs/: ecs.cpp
src/image/: image.cpp
src/log/: log.cpp
src/math/: quat.cpp  quaternion.cpp
src/math/matrix/: mat.cpp  (+3 more)
src/matrix/: mat.cpp  mat3.cpp  mat4.cpp  matrix.cpp
src/media/: audio.cpp  image.cpp
src/mesh/: mesh.cpp
src/model/: material.cpp  model.cpp
src/vector/: vec.cpp  vec1.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
src/window/: x11.cpp
(+40 files in other folders)
